[package]
name = "rte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
clap = "4.0.11"
crossbeam = "0.8.1"
crossbeam-utils = "0.8.8"
libc = "0.2.125"
signal-hook = "0.3.13"
log4rs = "1.2.0"
log = "0.4"
